Implemented basic-advanced classification pipeline and evaluation
Co-authored-by: Marco Amato <MarcoAmato@users.noreply.github.com>

--- a/concrete_abstract_classifier.ipynb
+++ b/concrete_abstract_classifier.ipynb
@@ -12,13 +12,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "id": "57a5d9a6bbd6699",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-04-16T08:56:57.564329900Z",
-     "start_time": "2024-04-16T08:56:56.146775100Z"
+     "end_time": "2024-04-16T10:25:49.128368900Z",
+     "start_time": "2024-04-16T10:25:47.574083200Z"
     }
    },
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "# TODO tune concreteness threshold\n",
@@ -52,15 +52,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-16T08:23:50.304245300Z",
-     "start_time": "2024-04-16T08:23:46.375425900Z"
+     "end_time": "2024-04-16T10:25:53.545282Z",
+     "start_time": "2024-04-16T10:25:49.132280Z"
     }
    },
    "id": "225e196be864a6ef"
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
@@ -84,15 +84,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-16T08:23:50.828320600Z",
-     "start_time": "2024-04-16T08:23:50.800304700Z"
+     "end_time": "2024-04-16T10:25:53.575282Z",
+     "start_time": "2024-04-16T10:25:53.551312200Z"
     }
    },
    "id": "initial_id"
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "classes = ['concrete', 'abstract']\n",
@@ -103,21 +103,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-16T08:23:51.855197600Z",
-     "start_time": "2024-04-16T08:23:51.844202900Z"
+     "end_time": "2024-04-16T10:25:53.621283800Z",
+     "start_time": "2024-04-16T10:25:53.565283400Z"
     }
    },
    "id": "f64c50482e1361b"
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "from time import sleep\n",
     "\n",
     "# get word vectors list\n",
-    "X = np.array([])\n",
+    "X = []\n",
     "index = 0\n",
     "for part in train_set:\n",
     "    for word in part:\n",
@@ -126,8 +126,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-16T08:51:19.410243100Z",
-     "start_time": "2024-04-16T08:48:27.841019100Z"
+     "end_time": "2024-04-16T10:29:31.645974700Z",
+     "start_time": "2024-04-16T10:25:53.578283700Z"
     }
    },
    "id": "d4a534c8fe6ed123"
@@ -137,14 +137,17 @@
    "execution_count": 11,
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'train_set' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[11], line 4\u001B[0m\n\u001B[0;32m      2\u001B[0m X \u001B[38;5;241m=\u001B[39m []\n\u001B[0;32m      3\u001B[0m index \u001B[38;5;241m=\u001B[39m \u001B[38;5;241m0\u001B[39m\n\u001B[1;32m----> 4\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m part \u001B[38;5;129;01min\u001B[39;00m \u001B[43mtrain_set\u001B[49m:\n\u001B[0;32m      5\u001B[0m     \u001B[38;5;28;01mfor\u001B[39;00m word \u001B[38;5;129;01min\u001B[39;00m part:\n\u001B[0;32m      6\u001B[0m         X\u001B[38;5;241m.\u001B[39mappend(\u001B[38;5;28mlist\u001B[39m(nlp(word))[\u001B[38;5;241m0\u001B[39m]\u001B[38;5;241m.\u001B[39mvector)\n",
-      "\u001B[1;31mNameError\u001B[0m: name 'train_set' is not defined"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Gianl\\Desktop\\UniTo\\tln\\dicaro\\basicness_classification\\venv\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:469: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
      ]
     }
    ],
@@ -156,20 +159,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2024-04-16T08:23:12.663099500Z"
+     "end_time": "2024-04-16T10:29:33.695990600Z",
+     "start_time": "2024-04-16T10:29:31.652975700Z"
     }
    },
    "id": "40ecc9c6fe434588"
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "outputs": [
     {
      "data": {
       "text/plain": "['trained_models/concrete_abstract_classifier.joblib']"
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,15 +185,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-15T15:06:57.803730900Z",
-     "start_time": "2024-04-15T15:06:57.657374Z"
+     "end_time": "2024-04-16T10:29:33.754988400Z",
+     "start_time": "2024-04-16T10:29:33.694990400Z"
     }
    },
    "id": "289a2d38fd4e8bbc"
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "# load classifier\n",
@@ -198,25 +202,25 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-15T15:06:57.807729400Z",
-     "start_time": "2024-04-15T15:06:57.695687100Z"
+     "end_time": "2024-04-16T10:29:33.770998500Z",
+     "start_time": "2024-04-16T10:29:33.712991400Z"
     }
    },
    "id": "7a3b08270fb04f2b"
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "war -> 1 - abstract\n",
+      "war -> 0 - concrete\n",
       "fiefdom -> 1 - abstract\n",
       "bed -> 0 - concrete\n",
       "return_on_invested_capital -> 1 - abstract\n",
-      "texture -> 1 - abstract\n",
+      "texture -> 0 - concrete\n",
       "news -> 0 - concrete\n",
       "look -> 0 - concrete\n"
      ]
@@ -237,8 +241,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-15T15:06:57.895680Z",
-     "start_time": "2024-04-15T15:06:57.743689200Z"
+     "end_time": "2024-04-16T10:29:33.833990600Z",
+     "start_time": "2024-04-16T10:29:33.728993600Z"
     }
    },
    "id": "acbb37d7f68c49e9"
@@ -255,23 +259,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "outputs": [],
+   "execution_count": 18,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n"
+     ]
+    }
+   ],
    "source": [
     "new_y = concreteness_df['conc_score']"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-16T08:51:29.306211800Z",
-     "start_time": "2024-04-16T08:51:29.277737900Z"
+     "end_time": "2024-04-16T10:30:26.342401500Z",
+     "start_time": "2024-04-16T10:30:26.305405Z"
     }
    },
    "id": "d53f519a9986332"
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "outputs": [
     {
      "name": "stdout",
@@ -293,91 +305,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-16T08:51:30.647161400Z",
-     "start_time": "2024-04-16T08:51:29.959585900Z"
+     "end_time": "2024-04-16T10:30:28.723085300Z",
+     "start_time": "2024-04-16T10:30:27.206577800Z"
     }
    },
    "id": "4e2a2b8d1a8e7f99"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "39954\n",
-      "31963\n"
-     ]
-    }
-   ],
-   "source": [
-    "#print training set\n",
-    "print(len(X))\n",
-    "print(len(X_train))"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-04-16T08:31:45.492146Z",
-     "start_time": "2024-04-16T08:31:45.462150400Z"
-    }
-   },
-   "id": "912bcd12a43d8f3f"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Gianl\\Desktop\\UniTo\\tln\\dicaro\\basicness_classification\\venv\\lib\\site-packages\\sklearn\\linear_model\\_coordinate_descent.py:678: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations, check the scale of the features or consider increasing regularisation. Duality gap: 5.763e+00, tolerance: 3.008e+00\n",
-      "  model = cd_fast.enet_coordinate_descent(\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn import linear_model\n",
-    "\n",
-    "alphas = np.logspace(-5, 1, 60)\n",
-    "enet = linear_model.ElasticNet(l1_ratio=0.7, max_iter=10000)\n",
-    "train_errors = list()\n",
-    "test_errors = list()\n",
-    "for alpha in alphas:\n",
-    "    enet.set_params(alpha=alpha)\n",
-    "    enet.fit(X_train, y_train)\n",
-    "    train_errors.append(enet.score(X_train, y_train))\n",
-    "    test_errors.append(enet.score(X_test, y_test))\n",
-    "\n",
-    "i_alpha_optim = np.argmax(test_errors)\n",
-    "alpha_optim = alphas[i_alpha_optim]\n",
-    "print(\"Optimal regularization parameter : %s\" % alpha_optim)\n",
-    "\n",
-    "# Estimate the coef_ on full data with optimal regularization parameter\n",
-    "enet.set_params(alpha=alpha_optim)\n",
-    "coef_ = enet.fit(X, new_y).coef_"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "is_executing": true,
-    "ExecuteTime": {
-     "start_time": "2024-04-16T08:57:02.174261100Z"
-    }
-   },
-   "id": "ffd9c0de8d2b3aa8"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "b939a54c46fdc234"
   }
  ],
  "metadata": {
