Refactor, added models evaluation, corrected regression model training, saved new models
Co-authored-by: Marco Amato <MarcoAmato@users.noreply.github.com>

--- a/concrete_abstract_classifier.ipynb
+++ b/concrete_abstract_classifier.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Load words with concreteness score from xls file, train a classifier to classify words as concrete or abstract, save the classifier"
+    "## Train a classifier to classify words as concrete or abstract\n",
+    "\n",
+    "1. Load words with concreteness score from xls file\n",
+    "2. Train a classifier to classify words as concrete or abstract\n",
+    "3. Save the classifier"
    ],
    "metadata": {
     "collapsed": false
@@ -12,55 +16,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 77,
    "id": "57a5d9a6bbd6699",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-04-16T10:25:49.128368900Z",
-     "start_time": "2024-04-16T10:25:47.574083200Z"
+     "end_time": "2024-04-17T09:25:04.008772400Z",
+     "start_time": "2024-04-17T09:25:02.862769800Z"
     }
    },
    "outputs": [],
    "source": [
-    "import numpy as np\n",
+    "import os.path\n",
+    "\n",
     "import spacy\n",
     "from nltk.corpus import wordnet as wn\n",
+    "import json\n",
     "\n",
     "import pandas as pd\n",
     "import joblib\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.metrics import mean_squared_error, accuracy_score, classification_report\n",
+    "\n",
     "\n",
     "# spacy.cli.download(\"en_core_web_md\")\n",
     "nlp = spacy.load(\"en_core_web_md\")"
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### 1. Load words with concreteness score from xls file\n",
+    "\n",
+    "The file contains a list of words with their concreteness score. The concreteness score is a value between 1 and 5.\n",
+    "Words with a concreteness score >= 3 are considered concrete, while words with a concreteness score < 3 are considered abstract.\n",
+    "These values can be tuned to test different thresholds."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "58bfacdb551e3c21"
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 78,
    "outputs": [],
    "source": [
-    "# TODO tune concreteness threshold\n",
     "concreteness_df = pd.read_excel(\"data/brysbaert_concreteness_ratings.xlsx\", na_filter=False)\n",
     "# extract list of words with concreteness >= 3 and < 3\n",
-    "concrete_words = concreteness_df.query('conc_score >= 3')['word'].tolist()  # words with concreteness >= 3\n",
-    "abstract_words = concreteness_df.query('conc_score < 3')['word'].tolist()  # words with concreteness < 3"
+    "concrete_words = concreteness_df.query('conc_score >= 3')['word'].to_list()\n",
+    "abstract_words = concreteness_df.query('conc_score < 3')['word'].tolist()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-16T10:25:53.545282Z",
-     "start_time": "2024-04-16T10:25:49.132280Z"
+     "end_time": "2024-04-17T09:25:07.483655400Z",
+     "start_time": "2024-04-17T09:25:04.014779100Z"
     }
    },
    "id": "225e196be864a6ef"
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Create file containing each word and its vector representation as a dictionary.\n",
+    "If the file already exists, load it instead of creating a new one."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "5efc99bcb61059a"
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 79,
+   "outputs": [],
+   "source": [
+    "if not os.path.exists(\"data/concreteness_word_vectors.txt\"):\n",
+    "    cols = ['word', 'vector']\n",
+    "    word_vector_dict = {}\n",
+    "    for word in concreteness_df['word']:\n",
+    "        word_vector = nlp(word).vector.tolist()\n",
+    "        word_vector_dict[word] = word_vector\n",
+    "    \n",
+    "    # save dictionary to file\n",
+    "    with open(\"data/concreteness_word_vectors.txt\", \"w\") as file:\n",
+    "        json.dump(word_vector_dict, file)\n",
+    "else:\n",
+    "    with open(\"data/concreteness_word_vectors.txt\", \"r\") as file:\n",
+    "        word_vector_dict = json.load(file)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-17T09:25:12.225134700Z",
+     "start_time": "2024-04-17T09:25:07.479658400Z"
+    }
+   },
+   "id": "7b89c3ae8a830e76"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
    "outputs": [
     {
      "name": "stdout",
@@ -84,96 +143,160 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-16T10:25:53.575282Z",
-     "start_time": "2024-04-16T10:25:53.551312200Z"
+     "end_time": "2024-04-17T09:25:12.238118900Z",
+     "start_time": "2024-04-17T09:25:12.228135700Z"
     }
    },
    "id": "initial_id"
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### 2. Train a classifier to classify words as concrete or abstract\n",
+    "\n",
+    "#### 2.1. Prepare the data\n",
+    "Create training data by combining the concrete and abstract words and their corresponding labels."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "29281fea7bd39023"
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 81,
    "outputs": [],
    "source": [
     "classes = ['concrete', 'abstract']\n",
-    "train_set = []\n",
-    "train_set.append(concrete_words)\n",
-    "train_set.append(abstract_words)"
+    "train_set = [concrete_words, abstract_words]"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-16T10:25:53.621283800Z",
-     "start_time": "2024-04-16T10:25:53.565283400Z"
+     "end_time": "2024-04-17T09:25:12.284180Z",
+     "start_time": "2024-04-17T09:25:12.242129800Z"
     }
    },
    "id": "f64c50482e1361b"
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Convert the words to word vectors using spaCy to get a more meaningful representation of the words.\n",
+    "Preparing labels for the words. Words with concreteness score >= 3 are labeled as 0 (concrete), while words with concreteness score < 3 are labeled as 1 (abstract).\n",
+    "We now have a training set with word vectors and their corresponding labels."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "d53b144c3adb5287"
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 82,
    "outputs": [],
    "source": [
-    "from time import sleep\n",
-    "\n",
-    "# get word vectors list\n",
+    "# create word vector list\n",
     "X = []\n",
-    "index = 0\n",
     "for part in train_set:\n",
     "    for word in part:\n",
-    "        X.append(nlp(word)[0].vector)"
+    "        # get word vector for word\n",
+    "        word_vector = word_vector_dict[word]\n",
+    "        X.append(word_vector)\n",
+    "        \n",
+    "# get labels\n",
+    "y = [0] * len(concrete_words) + [1] * len(abstract_words)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-16T10:29:31.645974700Z",
-     "start_time": "2024-04-16T10:25:53.578283700Z"
+     "end_time": "2024-04-17T09:25:12.298117200Z",
+     "start_time": "2024-04-17T09:25:12.269118200Z"
     }
    },
    "id": "d4a534c8fe6ed123"
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Gianl\\Desktop\\UniTo\\tln\\dicaro\\basicness_classification\\venv\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:469: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "Please also refer to the documentation for alternative solver options:\n",
-      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  n_iter_i = _check_optimize_result(\n"
-     ]
-    }
-   ],
+   "cell_type": "markdown",
    "source": [
-    "# get labels\n",
-    "y = [label for label, part in enumerate(train_set) for _ in part]\n",
-    "classifier = LogisticRegression(C=0.1, class_weight='balanced').fit(X, y)"
+    "#### 2.2. Train the classifier"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "a53679c4116656bd"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
+    "\n",
+    "classifier = LogisticRegression(max_iter=500).fit(X_train, y_train)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-16T10:29:33.695990600Z",
-     "start_time": "2024-04-16T10:29:31.652975700Z"
+     "end_time": "2024-04-17T09:25:15.063118500Z",
+     "start_time": "2024-04-17T09:25:12.288118500Z"
     }
    },
    "id": "40ecc9c6fe434588"
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "#### 2.3. Evaluate and save the classifier"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "379b40182c04faee"
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 84,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy score: 0.8082923166763994\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.81      0.76      0.79      5614\n",
+      "           1       0.80      0.85      0.82      6373\n",
+      "\n",
+      "    accuracy                           0.81     11987\n",
+      "   macro avg       0.81      0.81      0.81     11987\n",
+      "weighted avg       0.81      0.81      0.81     11987\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = classifier.predict(X_test)\n",
+    "print(f\"Accuracy score: {accuracy_score(y_test, y_pred)}\")\n",
+    "print(classification_report(y_test, y_pred))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-17T09:25:15.236118700Z",
+     "start_time": "2024-04-17T09:25:15.064118500Z"
+    }
+   },
+   "id": "5576feb91af03727"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
    "outputs": [
     {
      "data": {
       "text/plain": "['trained_models/concrete_abstract_classifier.joblib']"
      },
-     "execution_count": 12,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,15 +308,25 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-16T10:29:33.754988400Z",
-     "start_time": "2024-04-16T10:29:33.694990400Z"
+     "end_time": "2024-04-17T09:25:15.298164900Z",
+     "start_time": "2024-04-17T09:25:15.237118700Z"
     }
    },
    "id": "289a2d38fd4e8bbc"
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "#### 2.4. Sample use"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "93c4aae414bc1f48"
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 86,
    "outputs": [],
    "source": [
     "# load classifier\n",
@@ -202,21 +335,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-16T10:29:33.770998500Z",
-     "start_time": "2024-04-16T10:29:33.712991400Z"
+     "end_time": "2024-04-17T09:25:15.302153900Z",
+     "start_time": "2024-04-17T09:25:15.255118900Z"
     }
    },
    "id": "7a3b08270fb04f2b"
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 87,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "war -> 0 - concrete\n",
+      "war -> 1 - abstract\n",
       "fiefdom -> 1 - abstract\n",
       "bed -> 0 - concrete\n",
       "return_on_invested_capital -> 1 - abstract\n",
@@ -227,8 +360,7 @@
     }
    ],
    "source": [
-    "synsets = ['war.n.01', 'fiefdom.n.01', 'bed.n.03', 'return_on_invested_capital.n.01', 'texture.n.02', 'news.n.01',\n",
-    "           'look.n.02']\n",
+    "synsets = ['war.n.01', 'fiefdom.n.01', 'bed.n.03', 'return_on_invested_capital.n.01', 'texture.n.02', 'news.n.01', 'look.n.02']\n",
     "\n",
     "for synset_str in synsets:\n",
     "    synset = wn.synset(synset_str)\n",
@@ -241,8 +373,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-16T10:29:33.833990600Z",
-     "start_time": "2024-04-16T10:29:33.728993600Z"
+     "end_time": "2024-04-17T09:25:15.326124500Z",
+     "start_time": "2024-04-17T09:25:15.271118600Z"
     }
    },
    "id": "acbb37d7f68c49e9"
@@ -250,7 +382,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Regression version. Predicting concreteness score of a word."
+    "### 3. Regression model version\n",
+    "\n",
+    "We predict now the concreteness score of a word"
    ],
    "metadata": {
     "collapsed": false
@@ -259,42 +393,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'list'>\n"
-     ]
-    }
-   ],
+   "execution_count": 88,
+   "outputs": [],
    "source": [
-    "new_y = concreteness_df['conc_score']"
+    "words = concreteness_df['word'].tolist()\n",
+    "concreteness_scores = concreteness_df['conc_score'].tolist()\n",
+    "X = []\n",
+    "y = concreteness_scores\n",
+    "\n",
+    "for word in words:\n",
+    "    # get word vector for word\n",
+    "    word_vector = word_vector_dict[word]\n",
+    "    X.append(word_vector)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-16T10:30:26.342401500Z",
-     "start_time": "2024-04-16T10:30:26.305405Z"
+     "end_time": "2024-04-17T09:25:15.360698100Z",
+     "start_time": "2024-04-17T09:25:15.317121500Z"
     }
    },
    "id": "d53f519a9986332"
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 89,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Squared Error: 0.9317894584297259\n"
+      "eh -> 1.04\n",
+      "essentialness -> 1.04\n",
+      "although -> 1.07\n",
+      "spirituality -> 1.07\n",
+      "would -> 1.12\n",
+      "spiritually -> 1.14\n",
+      "whatsoever -> 1.17\n",
+      "conceptualistic -> 1.18\n",
+      "conventionalism -> 1.18\n",
+      "belief -> 1.19\n"
      ]
     }
    ],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X, new_y, test_size=0.3, random_state=42)\n",
+    "# print the first 10 words alog with their concreteness scores\n",
+    "for i in range(10):\n",
+    "    print(f'{words[i]} -> {y[i]}')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-17T09:25:15.372156400Z",
+     "start_time": "2024-04-17T09:25:15.350117900Z"
+    }
+   },
+   "id": "d37d804e183e5917"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Squared Error: 0.47152531458015673\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
     "\n",
     "model = LinearRegression().fit(X_train, y_train)\n",
     "\n",
@@ -305,11 +474,37 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-16T10:30:28.723085300Z",
-     "start_time": "2024-04-16T10:30:27.206577800Z"
+     "end_time": "2024-04-17T09:25:16.170133400Z",
+     "start_time": "2024-04-17T09:25:15.365121Z"
     }
    },
    "id": "4e2a2b8d1a8e7f99"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "['trained_models/concreteness_regression_model.joblib']"
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# save model\n",
+    "joblib.dump(model, \"trained_models/concreteness_regression_model.joblib\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-17T09:25:16.214946600Z",
+     "start_time": "2024-04-17T09:25:16.170133400Z"
+    }
+   },
+   "id": "d4faab236c28c2be"
   }
  ],
  "metadata": {
